Mon Apr  7 21:11:49 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket/socket.c (sock_s_getnameinfo): Save errno for EAI_SYSTEM.
	  Reported by Saravana kumar.  [ruby-core:61820] [Bug #9697]
	  Fixed by Heesob Park.  [ruby-core:61868]

Mon Apr  7 07:20:23 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/xmlrpc/client.rb (do_rpc): don't check body length.
	  If HTTP content-encoding is used, the length may be different.
	  [Bug #8182] [ruby-core:53811]

Mon Apr  7 02:39:48 2014  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Add Matrix#cofactor [fix GH-568]
	  Add first_minor [fix GH-568]
	  Handle empty diagonal matrix case [fix GH-576]
	  Patches by gogotanaka

Sun Apr  6 08:52:50 2014  Bugra Barin  <bugrabarin@hotmail.com>

	* dln.c (dln_load): use wchar version to load a library in
	  non-ascii path on Windows.  based on the patch by Bugra Barin
	  <bugrabarin AT hotmail.com> in [ruby-core:61845].  [Bug #9699]

Sat Apr  5 19:36:33 2014  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c (d_lite_cmp): should compare with #<.

Sat Apr  5 00:31:21 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/readline/extconf.rb (rl_hook_func_t): check pointer type.
	  [ruby-dev:48089] [Bug #9702]

Fri Apr  4 07:13:44 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ac_cv_func___builtin_setjmp): should not skip
	  flags restoration in RUBY_WERROR_FLAG by `break`.
	  [ruby-dev:48086] [Bug #9698]

Wed Apr  2 21:50:06 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ac_cv_func___builtin_setjmp): __builtin_longjmp() in
	  clang 5.1 uses `void**`, not `jmp_buf`.  [Bug #9692]

Wed Apr  2 20:57:15 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c, gc.h (rb_objspace_each_objects_without_setup):
	  Add a new (hidden) C-API to iterate objspace snapshot.

	  This API is not safe to call any C-APIs in a given callback
	  function. Be careful to use this C-API.

Wed Apr  2 17:43:17 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
